# VenHue

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Main.qml  README.md  flake.nix
config/: light_effects.json
include/: animated_effect_definition.h  animated_light_effect.h  configuration_manager.h  controller.h  hue_connection_state.h  light_director.h  light_effect_loader.h  logger.h  parser.h  venue_monitor.h
scripts/: edk-clang++
src/: animated_light_effect.cpp  configuration_manager.cpp  controller.cpp  hue_connection_state.cpp  light_director.cpp  light_effect_loader.cpp  logger.cpp  main.cpp  parser.cpp  venue_monitor.cpp
